--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* body {
@@ -27,7 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-width: 500px;
+  min-width: 700px;
   min-height: 616px;
 }
 
@@ -35,14 +36,10 @@ body {
 .form,
 .foot-section {
   width: 100%;
-  /* height: calc(100vh / 3); */
-  flex: 1;
-  flex-shrink: 0;
 }
 
 .picture {
   height: 100vh;
-  /* max-width: 450px; */
   min-width: 450px;
   width: 500px;
   min-height: 616px;
@@ -56,7 +53,7 @@ body {
   background-color: white;
   position: relative;
   z-index: 1;
-  flex: 1.7;
+  flex: 2;
 }
 
 .header,
@@ -65,7 +62,11 @@ body {
 }
 
 .foot-section {
-  flex: 0.7;
+  flex: 0.6;
+}
+
+.header {
+  flex: 1;
 }
 
 .logo {
@@ -88,4 +89,44 @@ body {
 .odin {
   height: 8rem;
   width: 6rem;
+}
+
+.header-text {
+  margin: 40px 100px 0 40px;
+}
+
+.form-title {
+  margin: 20px 0 30px 40px;
+}
+
+.fields-container {
+  display: flex;
+  height: 250px;
+  width: 500px;
+  gap: 100px;
+  margin-top: 20px;
+  margin-left: 40px;
+}
+
+input {
+  border: solid 1px rgb(207, 207, 207);
+  width: 270px;
+  height: 30px;
+  margin-bottom: 25px;
+  border-radius: 4px;
+  -webkit-appearance: none; /* Chrome, Safari, Edge */
+  -moz-appearance: none; /* Firefox */
+  appearance: none;
+}
+
+input:focus {
+  box-shadow: 2px 2px 3px #8f8f8f;
+  border: solid 1px #2167a1;
+  outline: none;
+}
+
+label {
+  font-size: 13px;
+  font-weight: 400;
+  letter-spacing: 2px;
 }
